# check_ipv6_address

./: .gitignore  README.md  SECURITY.MD  check_ipv6_address.py  pyproject.toml
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
tests/: test_not_much.py
