[tool.poetry]
name = "check_ipv6_address"
version = "0.1.0"
description = "A nagios check for finding the local subnet."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"

[tool.poetry.dev-dependencies]
mypy = "^1.13"
pylint = "^3.2.7"
pytest = "^8.3.4"
black = "^24.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'check_ipv6_address' = 'check_ipv6_address.py:cli()'
