[tool.poetry]
name = "check_ipv6_address"
version = "0.1.0"
description = "A nagios check for finding the local subnet."
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.8"

[tool.poetry.dev-dependencies]
mypy = "^1.14"
pylint = "^3.2.7"
pytest = "^8.3.5"
black = "^24.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.10"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'check_ipv6_address' = 'check_ipv6_address.py:cli()'
