

[project]
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "click>=8.3.1", # toml reflow stopper
]
name = "check_ipv6_address"
version = "0.1.0"
description = "A nagios check for finding the local subnet."

[project.scripts]
check_ipv6_address = "check_ipv6_address:cli"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.7",
    "ty>=0.0.24",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
